@@ -401,3 +401,4 @@ Changelog:
                 Updated supported Java version to 1.7.
                 Set Spigot api-version to stop getting flagged as a legacy plugin.
                 Fixed no message being sent to the command sender if the report index is out of range.
+                Fixed sending an error instead of a usage hint if the report index is not parsable into an integer.
